# Space_Explorer

./: CMakeLists.txt  SEM_main.h  SEM_main.ui  Scores.h  Scores.ui  Settings.ui  game.h  main.cpp  player.cpp  player.h  scores.txt  settings.h
